--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^4.9.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
@@ -16,6 +17,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^22.0.1",
     "@vue/cli-plugin-babel": "^3.0.0-alpha.11",
     "@vue/cli-plugin-pwa": "^3.0.0-alpha.11",
