--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-jest": "^22.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1",
     "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
